user module feature
1. created cache event for requesting apis but need to work on it more
2. added active profile todos
3. removed admin based entity methods
4. added common extensions and methods